# CPlaylist

./: CMakeLists.txt  main.c  playlist.c  playlist.h  screens.c  screens.h  state.h  ui_components.c  ui_components.h
